Bug 433157 - Inexact error message on ambiguous shortcuts
Summary: Inexact error message on ambiguous shortcuts
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kxmlgui
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-18 11:12 UTC by Dan Dascalescu
Modified: 2021-02-19 21:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.80
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dan Dascalescu 2021-02-18 11:12:31 UTC
The error message from bug 433156 is inexact.

OBSERVED RESULT
"The key sequence 'Ctrl+C' is ambiguous. Use 'Configure Shortcuts'
from the 'Settings' menu to solve the ambiguity."

EXPECTED RESULT
The correct menu entry is 'Configure Keyboard Shortcuts'
Comment 1 Kevin Kofler 2021-02-18 15:04:46 UTC
This error message comes from KF5 KXMLGUI, reassigning.
Comment 2 Nate Graham 2021-02-19 21:50:57 UTC
Ah yes, I forgot to update the text in this place.
Comment 3 Nate Graham 2021-02-19 21:52:26 UTC
Git commit f226590cfd16f86abfb15517a948bb19d8e9ba6e by Nate Graham.
Committed on 19/02/2021 at 21:51.
Pushed by ngraham into branch 'master'.

Correct name of menu item

It was changed a whlie back from "Configure Shortcuts" to "Configure
Keyboard Shortcuts," but that was never updated here too.
FIXED-IN: 5.80

M  +1    -1    src/kactionconflictdetector.cpp

https://invent.kde.org/frameworks/kxmlgui/commit/f226590cfd16f86abfb15517a948bb19d8e9ba6e