Correct name of menu item

It was changed a whlie back from "Configure Shortcuts" to "Configure
Keyboard Shortcuts," but that was never updated here too.

BUG: 433157
FIXED-IN: 5.80